change login and signup buttons text

--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -7,6 +7,6 @@
 <form action="{% url 'login' %}" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input class="btn btn-primary" type="submit" value="{% translate 'Log In' %}">
+    <input class="btn btn-primary" type="submit" value="{% translate 'Log In Button' %}">
 </form>
 {% endblock %}
