--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -4,9 +4,13 @@
 
 {% block content %}
 <h1 class="my-4"> {% translate "Enter" %}</h1>
+{% if not user.is_authenticated %}
 <form action="{% url 'login' %}" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
     <input class="btn btn-primary" type="submit" value="{% translate 'Log In Button' %}">
 </form>
+{% else%}
+<p>{% translate "You are already logged in! Try logging out and signing in again." %}</p>
+{% endif %}
 {% endblock %}
