--- a/task_manager/templates/users/user_create.html
+++ b/task_manager/templates/users/user_create.html
@@ -4,9 +4,13 @@
 
 {% block content %}
 <h1 class="my-4"> {% translate "Register" %}</h1>
+{% if not user.is_authenticated %}
 <form action="{% url 'create_user' %}" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
     <input class="btn btn-primary" type="submit" value="{% translate 'Sign Up Button' %}">
 </form>
+{% else%}
+<p>{% translate "You can't register a new user when you are already logged in! Try logging out and signing up again." %}</p>
+{% endif %}
 {% endblock %}
