add custom additional title for each page

--- a/task_manager/templates/users/user_create.html
+++ b/task_manager/templates/users/user_create.html
@@ -2,8 +2,9 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
+{% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Register" %}{% endblock %}
 {% block content %}
-<h1 class="my-4"> {% translate "Register" %}</h1>
+<h1 class="my-4">{% translate "Register" %}</h1>
 {% if not user.is_authenticated %}
 <form action="{% url 'create_user' %}" method="post">
     {% csrf_token %}
