--- a/task_manager/templates/layout/default.html
+++ b/task_manager/templates/layout/default.html
@@ -8,7 +8,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% translate "Hexlet Task Manager" %}</title>
+    <title>{% block title %}{% translate "Hexlet Task Manager" %}{% endblock %}</title>
     {% bootstrap_css %}
     {% load static %}
     <link href="{% static 'style.css' %}" rel="stylesheet">
