--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -2,6 +2,7 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
+{% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Enter" %}{% endblock %}
 {% block content %}
 <h1 class="my-4"> {% translate "Enter" %}</h1>
 {% if not user.is_authenticated %}
