--- a/task_manager/templates/users/users_list.html
+++ b/task_manager/templates/users/users_list.html
@@ -2,8 +2,9 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
+{% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Users" %}{% endblock %}
 {% block content %}
-    <h1 class="my-4">{% trans "Users" %}</h1>
+    <h1 class="my-4">{% translate "Users" %}</h1>
     <table class="table table-striped table-hover">
         <thead>
         <tr>
