fourth step of project #4: statuses crud

--- a/task_manager/templates/users/user_delete.html
+++ b/task_manager/templates/users/user_delete.html
@@ -5,7 +5,7 @@
 {% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Users" %} | {% translate "Delete user" %}{% endblock %}
 {% block content %}
 <h1 class="my-4">{% translate "Delete user" %}</h1>
-<form action="{% url 'delete_user' pk=user.id %}" method="post">
+<form method="post">
     {% csrf_token %}
     <p>{% translate "Are you sure you want to delete" %} {{ user }}?</p>
     <input class="btn btn-danger" type="submit" value="{% translate 'Delete Button' %}">
