--- a/task_manager/templates/layout/default.html
+++ b/task_manager/templates/layout/default.html
@@ -30,7 +30,7 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">{% translate "Statuses" %}</a>
+                        <a class="nav-link" href="{% url 'statuses_list' %}">{% translate "Statuses" %}</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">{% translate "Labels" %}</a>
