--- a/task_manager/templates/users/user_create.html
+++ b/task_manager/templates/users/user_create.html
@@ -6,7 +6,7 @@
 {% block content %}
 <h1 class="my-4">{% translate "Register" %}</h1>
 {% if not user.is_authenticated %}
-<form action="{% url 'create_user' %}" method="post">
+<form method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
     <input class="btn btn-primary" type="submit" value="{% translate 'Sign Up Button' %}">
