--- a/task_manager/templates/users/user_update.html
+++ b/task_manager/templates/users/user_update.html
@@ -5,7 +5,7 @@
 {% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Users" %} | {% translate "Update user" %}{% endblock %}
 {% block content %}
 <h1 class="my-4">{% translate "Update user" %}</h1>
-<form action="{% url 'update_user' pk=user.id %}" method="post">
+<form method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
     <input class="btn btn-primary" type="submit" value="{% translate 'Update Button' %}">
