--- a/task_manager/templates/users/users_list.html
+++ b/task_manager/templates/users/users_list.html
@@ -17,14 +17,14 @@
         <tbody>
         {% for user in users %}
             <tr>
-                <td>{{ user.id }}</td>
-                <td>{{ user.username }}</td>
-                <td>{{ user.first_name }} {{ user.last_name }}</td>
-                <td>{{ user.date_joined|date:"d.m.Y H:i" }}</td>
-                <td>
-                    <a href="{% url 'update_user' pk=user.id %}">{% translate "Update" %}</a>
+                <td class="align-middle">{{ user.id }}</td>
+                <td class="align-middle">{{ user.username }}</td>
+                <td class="align-middle">{{ user.first_name }} {{ user.last_name }}</td>
+                <td class="align-middle">{{ user.date_joined|date:"d.m.Y H:i" }}</td>
+                <td class="align-middle">
+                    <a href="{% url 'update_user' user.id %}">{% translate "Update" %}</a>
                     <br>
-                    <a href="{% url 'delete_user' pk=user.id %}">{% translate "Delete" %}</a>
+                    <a href="{% url 'delete_user' user.id %}">{% translate "Delete" %}</a>
                 </td>
             </tr>
         {% endfor %}
