major internationalization refactor

--- a/task_manager/templates/index.html
+++ b/task_manager/templates/index.html
@@ -5,10 +5,10 @@
 <h1 class="my-4"></h1>
 <div class="card">
     <div class="card-body p-5 bg-light">
-        <div class="display-4">{% translate "Hello From Hexlet" %}</div>
-        <p class="lead">{% translate "Practical Programming Courses" %}</p>
+        <div class="display-4">{% translate "HelloMessage" %}</div>
+        <p class="lead">{% translate "MainIndexContentInfo" %}</p>
         <hr>
-        <a class="btn btn-primary btn-lg" href="https://ru.hexlet.io">{% translate "Get More Info" %}</a>
+        <a class="btn btn-primary btn-lg" href="https://ru.hexlet.io">{% translate "ButtonGetMoreInfo" %}</a>
     </div>
 </div>
 {% endblock %}
