--- a/task_manager/templates/users/users_list.html
+++ b/task_manager/templates/users/users_list.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Users" %}{% endblock %}
+{% block title %}{% translate "HexletTaskManager" %} | {% translate "Users" %}{% endblock %}
 {% block content %}
     <h1 class="my-4">{% translate "Users" %}</h1>
     <table class="table table-striped table-hover">
@@ -10,8 +10,8 @@
         <tr>
             <th>ID</th>
             <th>{% translate "Username" %}</th>
-            <th>{% translate "Full name" %}</th>
-            <th colspan="2">{% translate "Creation date" %}</th>
+            <th>{% translate "FullName" %}</th>
+            <th colspan="2">{% translate "CreationDate" %}</th>
         </tr>
         </thead>
         <tbody>
