--- a/task_manager/templates/login.html
+++ b/task_manager/templates/login.html
@@ -2,16 +2,16 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Enter" %}{% endblock %}
+{% block title %}{% translate "HexletTaskManager" %} | {% translate "Enter" %}{% endblock %}
 {% block content %}
 <h1 class="my-4"> {% translate "Enter" %}</h1>
 {% if not user.is_authenticated %}
 <form action="{% url 'login' %}" method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input class="btn btn-primary" type="submit" value="{% translate 'Log In Button' %}">
+    <input class="btn btn-primary" type="submit" value="{% translate 'ButtonSignIn' %}">
 </form>
 {% else%}
-<p>{% translate "You are already logged in! Try logging out and signing in again." %}</p>
+<p>{% translate "AuthorizationAlreadyLogIn" %}</p>
 {% endif %}
 {% endblock %}
