--- a/task_manager/templates/statuses/status_create.html
+++ b/task_manager/templates/statuses/status_create.html
@@ -2,12 +2,12 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Create status" %}{% endblock %}
+{% block title %}{% translate "HexletTaskManager" %} | {% translate "StatusCreate" %}{% endblock %}
 {% block content %}
-<h1 class="my-4">{% translate "Create status" %}</h1>
+<h1 class="my-4">{% translate "StatusCreate" %}</h1>
 <form method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input class="btn btn-primary" type="submit" value="{% translate 'Create Status Button' %}">
+    <input class="btn btn-primary" type="submit" value="{% translate 'ButtonCreate' %}">
 </form>
 {% endblock %}
