--- a/task_manager/templates/statuses/status_update.html
+++ b/task_manager/templates/statuses/status_update.html
@@ -2,12 +2,12 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Statuses" %} | {% translate "Update status" %}{% endblock %}
+{% block title %}{% translate "HexletTaskManager" %} | {% translate "Statuses" %} | {% translate "StatusUpdate" %}{% endblock %}
 {% block content %}
-<h1 class="my-4">{% translate "Update status" %}</h1>
+<h1 class="my-4">{% translate "StatusUpdate" %}</h1>
 <form method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input class="btn btn-primary" type="submit" value="{% translate 'Update Status Button' %}">
+    <input class="btn btn-primary" type="submit" value="{% translate 'Update' %}">
 </form>
 {% endblock %}
