--- a/task_manager/templates/statuses/statuses_list.html
+++ b/task_manager/templates/statuses/statuses_list.html
@@ -2,16 +2,16 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Statuses" %}{% endblock %}
+{% block title %}{% translate "HexletTaskManager" %} | {% translate "Statuses" %}{% endblock %}
 {% block content %}
     <h1 class="my-4">{% translate "Statuses" %}</h1>
-    <a href="{% url 'create_status' %}" class="btn btn-primary mb-2" role="button">{% translate "Create status" %}</a>
+    <a href="{% url 'create_status' %}" class="btn btn-primary mb-2" role="button">{% translate "StatusCreate" %}</a>
     <table class="table table-striped table-hover">
         <thead>
         <tr>
             <th>ID</th>
             <th>{% translate "Name" %}</th>
-            <th colspan="2">{% translate "Creation date" %}</th>
+            <th colspan="2">{% translate "CreationDate" %}</th>
         </tr>
         </thead>
         <tbody>
