--- a/task_manager/templates/users/user_create.html
+++ b/task_manager/templates/users/user_create.html
@@ -2,16 +2,16 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Register" %}{% endblock %}
+{% block title %}{% translate "HexletTaskManager" %} | {% translate "Register" %}{% endblock %}
 {% block content %}
 <h1 class="my-4">{% translate "Register" %}</h1>
 {% if not user.is_authenticated %}
 <form method="post">
     {% csrf_token %}
     {% bootstrap_form form %}
-    <input class="btn btn-primary" type="submit" value="{% translate 'Sign Up Button' %}">
+    <input class="btn btn-primary" type="submit" value="{% translate 'ButtonSignUp' %}">
 </form>
 {% else%}
-<p>{% translate "You can't register a new user when you are already logged in! Try logging out and signing up again." %}</p>
+<p>{% translate "UserRegisterDenialWhenAlreadyLogIn" %}</p>
 {% endif %}
 {% endblock %}
