--- a/task_manager/templates/users/user_delete.html
+++ b/task_manager/templates/users/user_delete.html
@@ -2,12 +2,12 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}{% translate "Hexlet Task Manager" %} | {% translate "Users" %} | {% translate "Delete user" %}{% endblock %}
+{% block title %}{% translate "HexletTaskManager" %} | {% translate "Users" %} | {% translate "UserDelete" %}{% endblock %}
 {% block content %}
-<h1 class="my-4">{% translate "Delete user" %}</h1>
+<h1 class="my-4">{% translate "UserDelete" %}</h1>
 <form method="post">
     {% csrf_token %}
-    <p>{% translate "Are you sure you want to delete" %} {{ user }}?</p>
-    <input class="btn btn-danger" type="submit" value="{% translate 'Delete Button' %}">
+    <p>{% translate "DeleteConfirmQuestion" %} {{ user }}?</p>
+    <input class="btn btn-danger" type="submit" value="{% translate 'ButtonDeleteConfirm' %}">
 </form>
 {% endblock %}
