--- a/task_manager/templates/layout/default.html
+++ b/task_manager/templates/layout/default.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="#">{% translate "Labels" %}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">{% translate "Tasks" %}</a>
+                        <a class="nav-link" href="{% url 'tasks_list' %}">{% translate "Tasks" %}</a>
                     </li>
                     {% endif %}
                 </ul>
