sixth step of project #4: labels crud

--- a/task_manager/templates/tasks/task.html
+++ b/task_manager/templates/tasks/task.html
@@ -34,7 +34,9 @@
                 <div class="col">
                     <h6>{% translate "Labels" %}:</h6>
                     <ul>
-                        <li><i>тут пока пустота</i></li>
+                        {% for label in task.labels.all %}
+                        <li><i>{{ label }}</i></li>
+                        {% endfor %}
                     </ul>
                 </div>
             </div>
