--- a/task_manager/templates/layout/default.html
+++ b/task_manager/templates/layout/default.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="{% url 'statuses_list' %}">{% translate "Statuses" %}</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">{% translate "Labels" %}</a>
+                        <a class="nav-link" href="{% url 'labels_list' %}">{% translate "Labels" %}</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'tasks_list' %}">{% translate "Tasks" %}</a>
