--- a/task_manager/templates/tasks/tasks_list.html
+++ b/task_manager/templates/tasks/tasks_list.html
@@ -6,6 +6,23 @@
 {% block content %}
     <h1 class="my-4">{% translate "Tasks" %}</h1>
     <a href="{% url 'create_task' %}" class="btn btn-primary mb-2" role="button">{% translate "TaskCreate" %}</a>
+
+    <div class="card mb-3">
+        <div class="card-body bg-light">
+            <form class="form-inline center" method="get">
+                {% bootstrap_form filter.form field_class='ml-2 mr-3' %}
+                <div class="container">
+                    <div class="row">
+                        <div class="col text-center">
+                            <input class="btn btn-primary mt-3" type="submit" value="{% translate 'ShowFilteredTasks' %}">
+                            <a href="{% url 'tasks_list' %}" class="btn btn-secondary mt-3 ml-3" role="button">{% translate "ResetForm" %}</a>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <table class="table table-striped table-hover">
         <thead>
         <tr>
