--- a/task_manager/templates/tasks/tasks_list.html
+++ b/task_manager/templates/tasks/tasks_list.html
@@ -9,13 +9,49 @@
 
     <div class="card mb-3">
         <div class="card-body bg-light">
-            <form class="form-inline center" method="get">
-                {% bootstrap_form filter.form field_class='ml-2 mr-3' %}
+            <form method="get">
                 <div class="container">
                     <div class="row">
-                        <div class="col text-center">
-                            <input class="btn btn-primary mt-3" type="submit" value="{% translate 'ShowFilteredTasks' %}">
-                            <a href="{% url 'tasks_list' %}" class="btn btn-secondary mt-3 ml-3" role="button">{% translate "ResetForm" %}</a>
+                        <div class="col-4">
+                            <div class="form-group">
+                                <div class="text-center"><label for="{{ filter.form.status.id_for_label }}">{% translate "Status" %}</label></div>
+                                <div>{{ filter.form.status }}</div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="form-group">
+                                <div class="text-center"><label for="{{ filter.form.executor.id_for_label }}">{% translate "Executor" %}</label></div>
+                                <div>{{ filter.form.executor }}</div>
+                            </div>
+                        </div>
+                        <div class="col-4">
+                            <div class="form-group">
+                                <div class="text-center"><label for="{{ filter.form.labels.id_for_label }}">{% translate "Label" %}</label></div>
+                                <div>{{ filter.form.labels }}</div>
+                            </div>
+                        </div>
+                    </div>
+                    {% if filter.form.status.errors or filter.form.executor.errors or filter.form.labels.errors %}
+                    <div class="row">
+                        <div class="col-4"><small class="text-danger">{{ filter.form.status.errors }}</small></div>
+                        <div class="col-4"><small class="text-danger">{{ filter.form.executor.errors }}</small></div>
+                        <div class="col-4"><small class="text-danger">{{ filter.form.labels.errors }}</small></div>
+                    </div>
+                    {% endif %}
+                    <div class="row">
+                        <div class="col d-flex justify-content-center">
+                            <div class="form-group">
+                                <div class="ml-3">
+                                    {{ filter.form.self_tasks }}
+                                    <label for="{{ filter.form.self_tasks.id_for_label }}">{% translate "SelfTasksOnly" %}</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col d-flex justify-content-center">
+                            <input class="btn btn-primary" type="submit" value="{% translate 'ShowFilteredTasks' %}">
+                            <a href="{% url 'tasks_list' %}" class="btn btn-secondary ml-2" role="button">{% translate "ResetForm" %}</a>
                         </div>
                     </div>
                 </div>
