add toggler for filtering form

--- a/task_manager/templates/layout/default.html
+++ b/task_manager/templates/layout/default.html
@@ -68,5 +68,6 @@
         <div class="text-center"><a href="https://ru.hexlet.io" class="text-secondary">Hexlet</a></div>
       </div>
     </footer>
+<script src="{% static 'toggler.js' %}"></script>
 </body>
 </html>
