--- a/task_manager/templates/tasks/task.html
+++ b/task_manager/templates/tasks/task.html
@@ -2,7 +2,7 @@
 {% load bootstrap4 %}
 {% load i18n %}
 
-{% block title %}{% translate "HexletTaskManager" %} | {% translate "TaskShow" %}{% endblock %}
+{% block title %}{% translate "HexletTaskManager" %} | {% translate "Tasks" %} | {% translate "TaskShow" %}{% endblock %}
 {% block content %}
 <h1 class="my-4">{% translate "TaskShow" %}</h1>
 <div class="card">
